# SLOPATHON

./: README.md
projects/TokLock/: README.md
projects/awesome-keyboard/: .gitignore  README.md  forge.config.ts  package-lock.json  package.json
projects/calendar-council/: .gitignore  README.md  SUBMIT.sh  next.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.ts
projects/chladni_clock/: README.md  README.txt  chladni_clock_v1.py
projects/cursed_minesweeper/: Readme.txt  index.html
projects/cursor-distorter/: .gitignore  README-product.md  README.md  package.json  pnpm-lock.yaml  tsconfig.base.json  vitest.config.ts
projects/gaslight-gatekeep-grandmaster/: README.md  ggg.html
projects/screamy-bird/: .gitignore  DEVELOPMENT_PLAN.md  README.md  eslint.config.mjs  package-lock.json  package.json  vite.static.config.ts
projects/silence-enforcer/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.github.config.ts  vite.static.config.ts
projects/slopario/: Dockerfile  README.md
projects/slopario/backend/: API.md  Cargo.toml
projects/slopario/backend/client-frontend/: README.md  index.html
projects/slopario/backend/host-frontend/: index.html
projects/slopario/backend/memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
projects/slopario/backend/src/: food.rs  game.rs  lib.rs  main.rs  player.rs  session.rs
projects/slopario/backend/src/ws/: controller.rs  display.rs
projects/slopario/backend/tests/: integration_test.rs
projects/sloppy-keyboard/: README.md  (+3 more)
(+320 files in other folders)
